infrastructure/kubernetes/overlays/preprod/infra/http-route-minio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
spec:
  parentRefs:
    - name: preprod
      namespace: networking
  hostnames:
    - minio.preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9001
