infrastructure/kubernetes/overlays/preprod/infra/http-route-qdrant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qdrant
spec:
  parentRefs:
    - name: preprod
      namespace: networking
  hostnames:
    - qdrant.preprod.djepenodev.ink
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qdrant
          port: 6333
